--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -21,7 +21,7 @@ nav aside {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url("../../assets/images/Logo.png");
+  background-image: url("../../assets/images/Logo.webp");
 }
 
 #left-nav h1 {
