--- a/src/components/sectionFive/SectionFive.css
+++ b/src/components/sectionFive/SectionFive.css
@@ -62,7 +62,7 @@
 }
 
 #sectionFive > aside:nth-child(2) > h1 {
-  font-size: 2.625rem;
+  font-size: 3rem;
   font-weight: 700;
   font-family: "Public Sans", sans-serif;
   margin-top: 0;
@@ -136,9 +136,10 @@
 @media screen and (max-width: 400px) {
   #sectionFive > aside:nth-child(1) {
     height: 12rem;
+    margin-top: 3rem;
   }
   #sectionFive {
-    gap: 3rem;
+    gap: 0rem;
   }
   #sectionFive {
     padding: 3rem 1rem;
