--- a/src/components/sectionSix/SectionSix.css
+++ b/src/components/sectionSix/SectionSix.css
@@ -107,8 +107,8 @@
   padding: 1rem;
   border-radius: 10px;
   width: 30vw;
-  filter: drop-shadow(0px 4px 25px rgba(0, 0, 0, 0.1));
-  box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.1);
+  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.1));
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
 #sectionSix > aside > article > aside {
@@ -201,6 +201,12 @@
 @media screen and (max-width: 800px) {
   #sectionSix > aside > article {
     width: 30rem !important;
+    box-sizing: border-box;
+  }
+
+  #sectionSix > aside {
+    flex-direction: column;
+    gap: 1.3rem;
   }
   #sectionSix {
     overflow: hidden;
@@ -209,16 +215,13 @@
     font-size: 2.4rem;
   }
   #sectionSix > aside {
-    width: 150rem !important;
+    justify-content: center;
   }
 }
 @media screen and (max-width: 600px) {
   #sectionSix > h1 {
     font-size: 2rem;
     margin-bottom: 3rem;
-  }
-  #sectionSix > aside > article {
-    width: 20rem !important;
   }
   #sectionSix {
     padding: 3rem;
@@ -230,9 +233,6 @@
     font-size: 1.625rem;
     margin-bottom: 3rem;
   }
-  #sectionSix > aside > article {
-    width: 20rem !important;
-  }
   #circle-decor {
     display: none;
   }
@@ -240,6 +240,6 @@
     padding: 3rem 1rem;
   }
   #sectionSix > aside > article {
-    width: 17rem !important;
+    width: 100% !important;
   }
 }
