--- a/src/components/sectionFive/SectionFive.css
+++ b/src/components/sectionFive/SectionFive.css
@@ -70,7 +70,7 @@
 }
 
 #sectionFive > aside:nth-child(2) > h1 > span {
-  color: var(--Primary);
+  color: #4ac86e;
 }
 
 #sectionFive > aside:nth-child(2) > a {
