--- a/src/components/sectionSeven/SectionSeven.css
+++ b/src/components/sectionSeven/SectionSeven.css
@@ -21,7 +21,7 @@
 }
 
 #sectionSeven > aside:nth-child(1) > h1 > span {
-  color: var(--Primary);
+  color: #4ac86e;
 }
 
 #sectionSeven > aside:nth-child(1) > a {
