--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 :root {
-  --Primary: #4968ff;
+  --Primary: #323b4b;
   --PrimaryBlack: #252525;
   --LightBluishGray: #eff2f6;
   --Ash: #676767;
-  --Secondary: #fc6b3f;
+  --Secondary: #323b4b;
   --AshBorder: #dadada;
 }
 
